# Changelog

Jumpcut predates the widespread adoption of semantic versioning; as such,
pre-1.0 releases are numbered as 0.XX.

## UNRELEASED
### Fixed
- Altered the check for transient types (and, optionally, concealed
types) to use a less brittle method that does not require actually
loading the pasteboard item. (Thanks to GitHub users acca and
maybeageek for the bug reports.)

## [0.74] - 2021-05-31
### Added
- Jumpcut is now a universal binary and will run natively on Intel
and Apple Silicon Macs.

## [0.73] - 2020-10-10
### Fixed
- Improved detection of Jumpcut-created clips to prevent re-adding
them to the clipping stack. (Thanks to GitHub user Web-Betty for
the bug report and screencast.)
### Added
- Individual clips may now be deleted by pressing the delete key or
backspace when the clip is displayed in the bezel.

## [0.72] - 2020-02-20
### Fixed
- Fixed issue preventing default hotkey (Control-Option-V) from being set
for first-time users.
- Jumpcut has updated to use the most recent ShortcutRecorder code
as of February 2020; while the fork previously in use worked correctly
on Macs running 10.13 (High Sierra) and later, a crashing bug was
reported when setting the master hotkey on Sierra (duplicated on El
Capitan). Using the mainline ShortcutRecorder (v3.1, from October 2019)
has resolved this issue on El Capitan, where the hotkey may not be set
normally.
- keyCodeToString crashed when using Hiragana and Katakana keyboards;
this code has been made more defensive and should work more robustly for
non-Roman keyboards. (Update: this change also fixed a similar bug with
Pinyin keyboards.) Thanks to Darren Gore for the initial bug report and
assistance with reproduction and testing.
### Added
- "Bezel selection pastes" and "menu selection pastes" are once again
separate items in the general preferences.

## [0.71] - 2019-09-19
### Fixed
- Display resolution changes now trigger adjustments to bezel size and